--- a/riderelli.css
+++ b/riderelli.css
@@ -1,8 +1,14 @@
 
+@font-face {
+  font-family: OldStyle;
+  src: url(OLDSH___.TTF);
+
+}
 a { 
-  font-family: 'Heiti SC', Arial; 
+  font-family: 'OldStyle', Arial; 
   font-size: 16px;
   text-decoration: none;
+  color: black;
 }
 
 body{
@@ -47,7 +53,7 @@ body{
   margin-right:40%;
   /*left: 50%;*/
   transform: translateY(-50%);
-  font-family: Arial; 
+  font-family: 'OldStyle', Arial; 
   font-size: 16px;
 
 }
