--- a/riderelli.css
+++ b/riderelli.css
@@ -1,15 +1,37 @@
 
 @font-face {
   font-family: OldStyle;
-  src: url(OLDSH___.TTF);
-
+  src: url(webfonts/oldstyle/OLDSH___.TTF);
 }
+
+@font-face {
+  font-family: OldStyleItal;
+  src: url(webfonts/oldstyle/OLDSIH__.TTF);
+}
+
+@font-face {
+  font-family: OldStyleCaps;
+  src: url(webfonts/oldstyle/OLDSSCH_.TTF);
+}
+
+@font-face {
+  font-family: BookmanBoldItal;
+  src: url(webfonts/bookmanoldital.ttf);
+}
+
+strong {
+  font-family: 'OldStyleCaps';
+  font-size: 18px
+}
+
+
 a { 
   font-family: 'OldStyle', Georgia, serif; 
   font-size: 16px;
   text-decoration: none;
   color: black;
 }
+
 
 body{
     background-image: url("hop-vine.png");
@@ -21,13 +43,13 @@ body{
 
 #container{
 	width: 100%;
-	height:100vh;
+	height:90vh;
 }
 
 #sidebar {
 	width:25%;
 	float:left;
-	height:100vh;
+	height:90vh;
 	position:relative;
 }
 
@@ -42,7 +64,7 @@ body{
 	width:75%;
 	/*margin-left: 25%;*/
   float:left;
-	height:100vh;
+	height:90vh;
 	position:relative;
 }
 
@@ -56,6 +78,13 @@ body{
   font-family: 'OldStyle', Georgia, serif; 
   font-size: 16px;
 
+}
+
+#foot-container {
+  text-align: center;
+  font-family: 'OldStyleItal';
+  width: 100%;
+  float:left;
 }
 
 @media screen and (max-width: 400px) {
